--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
     <!-- Hidden FormSubmit Parameters -->
     <input type="hidden" name="_subject" value="New message from your portfolio!">
     <input type="hidden" name="_template" value="table">
-    <input type="hidden" name="_next" value="https://yourportfolio.com/thank-you.html"> <!-- Replace with your actual URL -->
+    <input type="hidden" name="_next" value="https://azi77ry.github.io/Aziry-Portfolio/"> <!-- Replace with your actual URL -->
     <input type="hidden" name="_captcha" value="false">
     <input type="text" name="_honey" style="display:none"> <!-- Anti-spam honeypot -->
 
