--- a/index.html
+++ b/index.html
@@ -281,7 +281,10 @@
                 </div>
                 
                 <!-- Interactive Map -->
-                <div id="map"></div>
+                <div id="map">
+
+
+                </div>
             </div>
             
             <div class="contact-form">
@@ -316,7 +319,7 @@
     <footer>
         <div class="waves"></div>
         <div class="footer-content">
-            <a href="#" class="footer-logo">TechPortfolio</a>
+            <a href="#" class="footer-logo">Azizi Portfolio</a>
             <div class="footer-links">
                 <a href="#home">Home</a>
                 <a href="#about">About</a>
@@ -344,7 +347,7 @@
 
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQF5FJXX7CY8c705twPHaPTraeGRIx0FA&callback=initMap" async defer></script>
     <script src="script.js" defer></script>
     <script src="ai-knowledge.js" defer></script>
 
