--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <ul class="nav-links">
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#index">Projects</a></li>
+            <li><a href="#portfolio">Projects</a></li>
             <li><a href="#ai">AI Assistant</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
@@ -42,13 +42,13 @@
             <h1>Hi, I'm <span>Azizi Iddi</span></h1>
             <div class="typed-text"></div>
             <p>Full Stack Developer & AI Specialist creating cutting-edge digital experiences with modern web technologies and artificial intelligence.</p>
-            <a href="#index" class="btn">View My Work</a>
+            <a href="#portfolio" class="btn">View My Work</a>
             <div class="social-icons">
-                <a href="#"><i class="fab fa-github"></i></a>
+                <a href="https://github.com/Azi77ry"><i class="fab fa-github"></i></a>
                 <a href="#"><i class="fab fa-linkedin"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-dev"></i></a>
-                <a href="#"><i class="fab fa-codepen"></i></a>
+                <a href="https://wa.me/255692350076"><i class="fab fa-whatsapp"></i></a>
+                <a href="#"><i class="fab fa-facebook"></i></a>
+                <a href="https://www.instagram.com/aziry55?igsh=MWl4Z3VhOWNtOWxuNg=="><i class="fab fa-instagram"></i></a>
             </div>
         </div>
         
@@ -221,7 +221,7 @@
     </section>
 
         <!-- In your HTML (replace the existing AI section) -->
-<div class="ai-assistant">
+<section id="ai" class="ai-assistant">
     <h2 class="section-title">AI Assistant</h2>
     <div class="ai-container">
         <div class="ai-avatar">
@@ -235,8 +235,8 @@
             <button id="ai-submit"><i class="fas fa-paper-plane"></i> Ask</button>
         </div>
     </div>
-</div>
-    </section>
+
+</section>
 
     <!-- Contact Section -->
     <section id="contact" class="contact">
