--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                     </div>
                     <div class="contact-text">
                         <h3>Availability</h3>
-                        <p>Monday - Friday: 9am - 5pm PST</p>
+                        <p>Monday - Friday: 8am - 5pm PST</p>
                     </div>
                 </div>
                 
@@ -336,7 +336,8 @@
                 <a href="#"><i class="fab fa-dev"></i></a>
                 <a href="#"><i class="fab fa-codepen"></i></a>
             </div>
-            <p class="copyright">© 2023 TechPortfolio. All rights reserved.</p>
+            <p class="copyright">© 2025 Aziry_Portfolio. All rights reserved.</p>
+             <p class="copyright">powered by Aziry Technology.</p>
         </div>
     </footer>
 
