--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
         <div class="hero-content">
             <h1>Hi, I'm <span>Azizi Iddi</span></h1>
             <div class="typed-text"></div>
-            <p>Full Stack Developer & AI Specialist creating cutting-edge digital experiences with modern web technologies and artificial intelligence.</p>
+            <p>Full Stack Developer & Machine learning Researcher,  AI Specialist creating cutting-edge digital experiences with modern web technologies and artificial intelligence , Big data analystic , Database management and design, Computer Network and communication, IT Supporter .</p>
             <a href="#portfolio" class="btn">View My Work</a>
             <div class="social-icons">
                 <a href="https://github.com/Azi77ry"><i class="fab fa-github"></i></a>
                 <a href="#"><i class="fab fa-linkedin"></i></a>
                 <a href="https://wa.me/255692350076"><i class="fab fa-whatsapp"></i></a>
-                <a href="#"><i class="fab fa-facebook"></i></a>
+                <a href="#contact"><i class="fab fa-facebook"></i></a>
                 <a href="https://www.instagram.com/aziry55?igsh=MWl4Z3VhOWNtOWxuNg=="><i class="fab fa-instagram"></i></a>
             </div>
         </div>
@@ -64,9 +64,12 @@
         <div class="about-content">
             <div class="about-text">
                 <h3>Who I Am</h3>
-                <p>I'm a passionate full-stack developer with expertise in JavaScript, React, Node.js, and AI integration. With over 7 years of experience, I've helped startups and enterprises build innovative digital solutions.</p>
-                <p>My approach combines technical excellence with creative problem-solving to deliver exceptional user experiences powered by the latest technologies.</p>
-                
+                <p>Hi, I’m Azizi Iddi, a passionate Data Science student and technology innovator based in Dar es Salaam, Tanzania. I work at the intersection of software development, artificial intelligence, and IT innovation, creating smart solutions that turn complex problems into opportunities.</p>
+                <p>I specialize in Python, JavaScript, PHP, SQL, and machine learning frameworks, building everything from scalable web applications to AI-powered systems that can predict, automate, and optimize. My projects range from personal finance dashboards and intelligent maintenance trackers to real-time analytics tools for businesses.</p>
+                <p>For me, development is more than writing code it’s about designing technology that empowers people, improves efficiency, and drives impact. I believe innovation should be practical, solving real challenges in communities and industries, especially across East Africa.</p>
+
+
+
                 <div class="stats">
                     <div class="stat-item">
                         <div class="stat-number" data-count="10">0</div>
