--- a/index.html
+++ b/index.html
@@ -172,19 +172,19 @@
             </div>
             
             <div class="portfolio-item">
-                <img src="https://images.unsplash.com/photo-1559028012-481c04fa702d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80" alt="IoT Smart Home System">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR4uLeMJlsO-hVPSJJpJjyr3EJ7N2bljWuhRQ&s" alt="IoT Smart Home System">
                 <div class="portfolio-item-content">
-                    <h3>IoT Smart Home System</h3>
+                    <h3>Sales analystic & visualization</h3>
                     <div class="tech-tags">
-                        <span class="tech-tag">Raspberry Pi</span>
+                        <span class="tech-tag">pandas</span>
                         <span class="tech-tag">Python</span>
-                        <span class="tech-tag">MQTT</span>
-                        <span class="tech-tag">React Native</span>
+                        <span class="tech-tag">Matplotlib</span>
+                        <span class="tech-tag">seaborn</span>
                     </div>
                     <p>Complete smart home automation system with voice control and energy optimization.</p>
                     <div class="portfolio-links">
-                        <a href="#"><i class="fas fa-external-link-alt"></i> Live Demo</a>
-                        <a href="#"><i class="fab fa-github"></i> View Code</a>
+                        <a href="https://github.com/Azi77ry/sales-analysis/blob/main/SALES_ANALYSIS.ipynb"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                        <a href="https://github.com/Azi77ry/sales-analysis/blob/main/SALES_ANALYSIS.ipynb"><i class="fab fa-github"></i> View Code</a>
                     </div>
                 </div>
             </div>
@@ -328,7 +328,7 @@
             <div class="footer-links">
                 <a href="#home">Home</a>
                 <a href="#about">About</a>
-                <a href="#index">Projects</a>
+                <a href="#portfolio">Projects</a>
                 <a href="#ai">AI Assistant</a>
                 <a href="#contact">Contact</a>
                 <a href="#">Privacy Policy</a>
