--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                     </div>
                 </div>
             </div>
-            
+            <!--
             <div class="portfolio-item">
                 <img src="https://images.unsplash.com/photo-1639762681057-408e52192e55?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80" alt="Neural Network Visualizer">
                 <div class="portfolio-item-content">
@@ -222,9 +222,8 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>  -->
     </section>
-
         <!-- In your HTML (replace the existing AI section) -->
 <section id="ai" class="ai-assistant">
     <h2 class="section-title">AI Assistant</h2>
