--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                         <span class="tech-tag">Matplotlib</span>
                         <span class="tech-tag">seaborn</span>
                     </div>
-                    <p>Complete smart home automation system with voice control and energy optimization.</p>
+                    <p>Sales Analysis is a data analytics project that processes and visualizes sales data to uncover trends, performance metrics, and business insights.it cleans, transforms, and analyzes transactional datasets to generate reports or dashboards. Ideal for learning data analysis workflows or adapting to real-world sales data.</p>
                     <div class="portfolio-links">
                         <a href="https://github.com/Azi77ry/sales-analysis/blob/main/SALES_ANALYSIS.ipynb"><i class="fas fa-external-link-alt"></i> Live Demo</a>
                         <a href="https://github.com/Azi77ry/sales-analysis/blob/main/SALES_ANALYSIS.ipynb"><i class="fab fa-github"></i> View Code</a>
