--- a/index.html
+++ b/index.html
@@ -334,11 +334,12 @@
                 <a href="#">Terms of Service</a>
             </div>
             <div class="footer-social">
-                <a href="#"><i class="fab fa-github"></i></a>
+                <a href="https://github.com/Azi77ry"><i class="fab fa-github"></i></a>
                 <a href="#"><i class="fab fa-linkedin"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-dev"></i></a>
-                <a href="#"><i class="fab fa-codepen"></i></a>
+                <a href="https://wa.me/255692350076"><i class="fab fa-whatsapp"></i></a>
+                <a href="#contact"><i class="fab fa-facebook"></i></a>
+                <a href="https://www.instagram.com/aziry55?igsh=MWl4Z3VhOWNtOWxuNg=="><i class="fab fa-instagram"></i></a>
+                
             </div>
             <p class="copyright">© 2025 Aziry_Portfolio. All rights reserved.</p>
              <p class="copyright">powered by Aziry Technology.</p>
