--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <a href="#portfolio" class="btn">View My Work</a>
             <div class="social-icons">
                 <a href="https://github.com/Azi77ry"><i class="fab fa-github"></i></a>
-                <a href="#"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/aziziiddi/"><i class="fab fa-linkedin"></i></a>
                 <a href="https://wa.me/255692350076"><i class="fab fa-whatsapp"></i></a>
                 <a href="#contact"><i class="fab fa-facebook"></i></a>
                 <a href="https://www.instagram.com/aziry55?igsh=MWl4Z3VhOWNtOWxuNg=="><i class="fab fa-instagram"></i></a>
@@ -335,7 +335,7 @@
             </div>
             <div class="footer-social">
                 <a href="https://github.com/Azi77ry"><i class="fab fa-github"></i></a>
-                <a href="#"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/aziziiddi/"><i class="fab fa-linkedin"></i></a>
                 <a href="https://wa.me/255692350076"><i class="fab fa-whatsapp"></i></a>
                 <a href="#contact"><i class="fab fa-facebook"></i></a>
                 <a href="https://www.instagram.com/aziry55?igsh=MWl4Z3VhOWNtOWxuNg=="><i class="fab fa-instagram"></i></a>
