--- a/index.html
+++ b/index.html
@@ -204,10 +204,10 @@
                         <a href="https://azi77ry.github.io/Krevant/"><i class="fab fa-github"></i> View Code</a>
                     </div>
                 </div>
-            </div>s
+            </div>
             
             <div class="portfolio-item">
-                <img src="" alt="Quantum Computing Simulator">
+                <img src="https://s3.us-east-2.amazonaws.com/assets.yourgpt.ai/content/uploads/2025/06/05114827/AI-Assistant-3.png" alt="EASTC-AI Assistant">
                 <div class="portfolio-item-content">
                     <h3>EASTC AI Assistant</h3>
                     <div class="tech-tags">
