--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
             </div>
         </div>
         
-        <!-- 3D Model Container -->
+        <!-- 3D Model Container
         <div class="model-container" id="model-container">
-            <!-- Three.js model will be rendered here -->
-        </div>
+             Three.js model will be rendered here 
+        </div> -->
     </section>
 
     <!-- About Section -->
