--- a/index.html
+++ b/index.html
@@ -205,6 +205,24 @@
                     </div>
                 </div>
             </div>
+            <div class="portfolio-item">
+                <img src="Images/512.png" alt="Family Attendence System">
+                <div class="portfolio-item-content">
+                    <h3>Family Attendence System</h3>
+                    <div class="tech-tags">
+                        <span class="tech-tag">html</span>  
+                        <span class="tech-tag">javacript</span>
+                        <span class="tech-tag">node.js</span>
+                        <span class="tech-tag">Bootstrap</span>
+                        <span class="tech-tag">MongoDB</span>
+                    </div>
+                    <p>A modern, location-based attendance tracking system for families. Track morning and night check-ins with GPS verification to ensure family members are home safely.</p>
+                    <div class="portfolio-links">
+                        <a href="https://ghettoattendence.onrender.com/"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                        <a href="https://github.com/Azi77ry/familyAttendence"><i class="fab fa-github"></i> View Code</a>
+                    </div>
+                </div>
+            </div>
             
             <div class="portfolio-item">
                 <img src="https://s3.us-east-2.amazonaws.com/assets.yourgpt.ai/content/uploads/2025/06/05114827/AI-Assistant-3.png" alt="EASTC-AI Assistant">
@@ -224,6 +242,7 @@
                         <a href="https://huggingface.co/spaces/Aziry/EASTC-AI"><i class="fab fa-github"></i> View Code</a>
                     </div>
                 </div>
+           
             </div>
         </div>  
     </section>
